--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
           <h2 class="frame-4">In the WORLD</h2>
         </div>
     </div>
-  <li><a href="index.html">Skip intro</a></li>
+  <li><button href="index.html">Skip intro</button></li>
 </body>
 </html>
